--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 requires-python = ">=3.9"
-name = "chatgpt-stranslator"
+name = "chatgpt-translator"
 version = "0.1.0"
 dependencies = [
     "requests",
+    "uvicorn",
     "fastapi",
     "openai",
 ]
