--- a/requirements.txt
+++ b/requirements.txt
@@ -20,12 +20,16 @@ charset-normalizer==3.1.0
     # via
     #   aiohttp
     #   requests
+click==8.1.3
+    # via uvicorn
 fastapi==0.96.0
-    # via chatgpt-stranslator (pyproject.toml)
+    # via chatgpt-translator (pyproject.toml)
 frozenlist==1.3.3
     # via
     #   aiohttp
     #   aiosignal
+h11==0.14.0
+    # via uvicorn
 idna==3.4
     # via
     #   anyio
@@ -36,12 +40,12 @@ multidict==6.0.4
     #   aiohttp
     #   yarl
 openai==0.27.8
-    # via chatgpt-stranslator (pyproject.toml)
+    # via chatgpt-translator (pyproject.toml)
 pydantic==1.10.9
     # via fastapi
 requests==2.31.0
     # via
-    #   chatgpt-stranslator (pyproject.toml)
+    #   chatgpt-translator (pyproject.toml)
     #   openai
 sniffio==1.3.0
     # via anyio
@@ -53,5 +57,7 @@ typing-extensions==4.6.3
     # via pydantic
 urllib3==2.0.3
     # via requests
+uvicorn==0.22.0
+    # via chatgpt-translator (pyproject.toml)
 yarl==1.9.2
     # via aiohttp
