--- a/.github/workflows/check-and-test.yml
+++ b/.github/workflows/check-and-test.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - master
+  push:
+    branches:
+      - master
 
 jobs:
   format-check-and-tests:
@@ -25,4 +28,4 @@ jobs:
         run: black --check .
 
       - name: Run pytest
-        run: pytest
+        run: PYTHONPATH=$(pwd) pytest
